Add navbar and item preview view

--- a/views/components/Main/styles.sass
+++ b/views/components/Main/styles.sass
@@ -1,9 +1,14 @@
 .main
-  padding: 1rem 0
+  display: flex
+  margin: 0
+  width: 100%
+  justify-content: space-between
+.items
   display: flex
   flex-wrap: wrap
-  justify-content: space-between
-  min-height: 60vh
+  justify-content: center
+  align-items: left
+  width: 100vw
 .demo-input 
   width: 100%
   margin-bottom: 6px
