--- a/views/components/Item/styles.sass
+++ b/views/components/Item/styles.sass
@@ -1,15 +1,55 @@
-@import '../../styles/variables.sass'
+.item-hand 
+  height: 33.5em
+  width: 20em
+  font-family: 'Quicksand', sans-serif
+  overflow: hidden
+  display: flex
+  flex-direction: column
+  margin: 1em
+  padding: .5em
+  background-color: white
+  transition: transform 300ms bounce
 
-.item
-  padding-bottom: 4%
-  height: 250px
-  flex: 0 1 48%
-  align-items: stretch
-  &:nth-child(2n)
-    padding-left: 4%
-    padding-right: 0
+.items-title 
+  text-align: center
 
-.content
-  height: 100%
-  background: #eee
+
+img 
+  height: 20em
+
+
+#product-name 
+  border-top: 1px solid lightgrey
+  padding: 1em 0 0
+  font-size: 1.5em
+  font-family: 'Lato', sans-serif
+  margin: .5em 0
+
+
+#product-description 
+  font-size: 1em
+  font-family: 'Lato', sans-serif
+  color: grey
+  font-weight: lighter
+  margin: 0
+
+
+#product-price 
+  font-size: 1em
+
+
+.price-add 
+  display: flex
+  justify-content: space-between
+
+
+i 
+  color: lightgrey
+  transition: 0.5s
+  max-width: 25%
+
+
+i:hover 
+  color: grey
+  transition: 0.5s
   cursor: pointer
