Fix bug navbar show anywhere

--- a/views/styles/mediaqueries.sass
+++ b/views/styles/mediaqueries.sass
@@ -22,9 +22,9 @@
   button.normalBtn
     padding: .5rem 1rem !important
   .wrapper
-    max-width: 1200px
+    max-width: 80%
     margin: 10px auto
-    padding: 75px !important
+    padding: 25px !important
   .footer
     margin: 90px 0 0 0
     padding: 0
