--- a/views/components/Main/styles.sass
+++ b/views/components/Main/styles.sass
@@ -6,7 +6,7 @@
 .items
   display: flex
   flex-wrap: wrap
-  justify-content: center
+  justify-content: space-between
   align-items: left
   width: 100vw
 .demo-input 
