--- a/views/components/Item/styles.sass
+++ b/views/components/Item/styles.sass
@@ -33,7 +33,6 @@ img
   font-weight: lighter
   margin: 0
 
-
 #product-price 
   font-size: 1em
 
@@ -42,6 +41,9 @@ img
   display: flex
   justify-content: space-between
 
+
+.product-rating
+  margin: 1em 0
 
 i 
   color: lightgrey
