--- a/views/components/Join/styles.sass
+++ b/views/components/Join/styles.sass
@@ -2,11 +2,13 @@
 
 .loginWrapper
   min-height: 40vh
-  margin: 1rem auto 2rem auto
+  margin: 5rem auto 2rem auto
   .loginHeading
-    margin-bottom: 4rem
+    margin-bottom: 0rem
+    margin-top: 5rem
   .mainLogin, .mainSignup
     border: 2px solid black
+    border-radius: 10px
     text-align: center 
     margin: 1rem 20%
     .loginHeading
@@ -17,11 +19,13 @@
       margin: .2em auto
 
 .btnWrapper
+  border-radius: 10px
   margin: 2rem 0 0 0
   display: flex
   flex-direction: column
   justify-content: flex-start
   button
+    border-radius: 10px
     flex: 0
     max-width: 400px
     margin: 0 auto 2rem auto
