add rating star to product view

--- a/views/components/ItemPage/styles.sass
+++ b/views/components/ItemPage/styles.sass
@@ -30,7 +30,8 @@
     font-size: 1.5rem
     margin: 1rem 0
     font-weight: 500
-
+  .product-rating
+    margin: 1rem 0
   .backLink
     font-size: .9rem
     color: $grey
