Relayout cart view, add purchase panel

--- a/views/components/MyItems/styles.sass
+++ b/views/components/MyItems/styles.sass
@@ -20,3 +20,23 @@
     cursor: pointer
     &:hover
       color: $black
+.myCart
+  .productList
+    height: 100%
+    overflow: auto
+    display: inline-block
+    width: 70%
+    padding-right: 5%
+  .purchasePanel
+    width: 30%
+    display: inline-block
+    position: -webkit-sticky
+    position: sticky
+    top: 50px
+    vertical-align: top
+    label, p
+      font-weight: bold 
+      font-size: 1em
+      font-color: black
+    button
+      background-color: #F08080
