--- a/views/admin/admin-views/admin-category.ejs
+++ b/views/admin/admin-views/admin-category.ejs
@@ -70,7 +70,7 @@
                     </div>
                   </div>
                   <div class="col-lg-4 text-center" id = "add">
-                      <form action="./add" class="form text-center" method="post">
+                      <form action="./manage-category/add" class="form text-center" method="post">
                         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">Thêm danh mục mới</h1>
                         <input type="text" name ="name" id="first" class="form-control" placeholder="Tên danh mục" required="" autofocus="">
                         <input type="text" id="last" name="description" class="form-control" placeholder="Mô tả danh mục" required="" autofocus="">
