--- a/views/admin/admin-views/admin-order.ejs
+++ b/views/admin/admin-views/admin-order.ejs
@@ -37,8 +37,8 @@
                         <button type="button" id="closeCard3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
                         <div aria-labelledby="closeCard3" class="dropdown-menu dropdown-menu-right has-shadow">
                           <a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Đóng</a>
-                          <a href="#" class="dropdown-item edit" id = "edit-table"> <i class="fas fa-edit"></i>Bật sửa trực tiếp</a>
-                          <a href="#" class="dropdown-item edit" id = "add-btn"> <i class="fas fa-plus"></i>Thêm danh mục mới</a></div>
+                          <a href="#" class="dropdown-item edit" style ="display: none" id = "edit-table"> <i class="fas fa-edit"></i>Bật sửa trực tiếp</a>
+                          <a href="#" class="dropdown-item edit" style ="display: none" id = "add-btn"> <i class="fas fa-plus"></i>Thêm danh mục mới</a></div>
                       </div>
                     </div>
                     <div class="card-header d-flex align-items-center">
