Full of app version 1.0

--- a/views/admin/admin-views/admin-book.ejs
+++ b/views/admin/admin-views/admin-book.ejs
@@ -24,7 +24,7 @@
           <!-- Page Header-->
           <header class="page-header" id = "dash-title">
             <div class="container-fluid">
-              <h2>Quản lý/Quản lý danh mục</h2>
+              <h2>Quản lý/Quản lý sách</h2>
             </div>
           </header>
           <section>
