--- a/views/components/MyItems/styles.sass
+++ b/views/components/MyItems/styles.sass
@@ -40,3 +40,10 @@
       font-color: black
     button
       background-color: #F08080
+    input
+      margin-top: 15px
+      border: 1px solid gray 
+      border-radius: 5px
+    .coupon
+      padding: 25px
+      width: 100%
