--- a/views/admin/admin-views/admin-order.ejs
+++ b/views/admin/admin-views/admin-order.ejs
@@ -24,7 +24,7 @@
           <!-- Page Header-->
           <header class="page-header" id = "dash-title">
             <div class="container-fluid">
-              <h2>Quản lý/Quản lý danh mục</h2>
+              <h2>Quản lý/Quản lý đơn hàng</h2>
             </div>
           </header>
           <section>
@@ -42,7 +42,7 @@
                       </div>
                     </div>
                     <div class="card-header d-flex align-items-center">
-                      <h3>Các danh mục có trong kho</h3>
+                      <h3>Các đơn hàng hiện tại chưa giao</h3>
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">                       
